# magicc-wrapping

./: .gitignore  LICENCE  Makefile  NOTES.md  README.md  pyproject.toml
.github/workflows/: bump.yaml  ci.yaml  install-pypi.yaml  release.yaml
path/to/destination/repository/: .copier-answers.yml  README.md  mkdocs.yml  pyproject.toml
path/to/destination/repository/.github/workflows/: bump.yaml  ci.yaml  install-pypi.yaml  release.yaml
path/to/destination/repository/changelog/: README.md
path/to/destination/repository/docs/: NAVIGATION.md  development.md  gen_doc_stubs.py  installation.md
path/to/destination/repository/docs/further-background/: dependency-pinning-and-testing.md
path/to/destination/repository/docs/how-to-guides/: basic-calculation.md
path/to/destination/repository/scripts/: changelog-to-release-template.py  test-install.py
path/to/destination/repository/src/magicc_wrapping/: __init__.py
path/to/destination/repository/tests/unit/: test_operations.py
scripts/: inject-srcs-into-meson-build.py
src/example/: get_wavelength.py  runtime_helpers.py
