[project]
name = "example"
version = "0.1.0a1"
description = "Example of wrapping Fortran so it can be called from Python"
authors = [
    { name = "Zebedee Nicholls", email = "zebedee.nicholls@climate-energy-college.org" },
    { name = "Jared Lewis", email = "jared.lewis@climate-energy-college.org" },
    { name = "Marco Zecchetto", email = "zecchetto@iiasa.ac.at" },
]
requires-python = ">=3.9"
dependencies = [
    "attrs>=25.3.0",
    "numpy>=2.0.2",
]

[project.optional-dependencies]
full = [
    "pint>=0.24.4",
]

[tool.uv]
[dependency-groups]
dev = [
    "fprettify>=0.3.7",
    "meson>=1.8.3",
    "pint>=0.24.4",
    "pre-commit>=4.3.0",
]
all-dev = [
    {include-group = "dev"},
    # {include-group = "docs"},
    # {include-group = "tests"},
]

[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.15.0",
    "numpy",
]

# https://mesonbuild.com/meson-python/how-to-guides/meson-args.html
[tool.meson-python.args]
setup = [
    '--default-library=static',
    '-Dpyprojectwheelbuild=enabled',
]
# compile = ['-j4']
install = [
    # '--tags=bindings',
    '--skip-subprojects',
]
# dist = ['--include-subprojects']

# TODO: rest of usual stuff
